# photo-to-line-vectorizer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  EXTENSION_SYSTEM_COMPLETE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  PRODUCTION_READINESS_PLAN.md  PROJECT_STATUS.md  README.md  SESSION_PROGRESS.md  SETUP.md  docker-compose.yml
.claude/: settings.local.json
.husky/: pre-commit
.windsurf/rules/: 01-critical-rules.md  02-python-syntax.md  03-testing-philosophy.md  04-documentation.md  07-full-stack-integration.md  08-implementation-guidelines.md  09-command-permissions.md  10-key-patterns.md
backend/: .env.example  .ruff_extension_overrides.toml  ARCHITECTURE.md  Dockerfile  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: endpoints.py  endpoints.py.backup  models.py  websocket.py
backend/app/auth/: __init__.py  config.py  database.py  manager.py  models.py  routes.py  schemas.py
backend/app/extensions/: __init__.py  base.py  hooks.py  registry.py
backend/app/extensions/export/: EXT_Export.py  PRV_Vpype.py  __init__.py
backend/app/extensions/line_extraction/: EXT_LineExtraction.py  PRV_BilateralCanny.py  __init__.py
backend/app/extensions/optimize/: EXT_Optimize.py  PRV_Vpype.py  __init__.py
backend/app/extensions/preprocess/: EXT_Preprocess.py  PRV_ClassicalCV.py  PRV_U2Net.py  __init__.py
backend/app/extensions/vectorize/: EXT_Vectorize.py  PRV_ImageTracer.py  PRV_Potrace.py  __init__.py
backend/app/models/: __init__.py  classical_cv.py  u2net.py
backend/app/pipeline/: __init__.py  export.py  hatching.py  line_extraction.py  optimize.py  preprocess.py  processor.py  vectorize.py
backend/app/repositories/: __init__.py  job_repository.py
backend/app/services/: __init__.py  job_service.py
backend/app/storage/: __init__.py  jobs.py
backend/app/utils/: __init__.py  device.py
backend/docs/: api-endpoints.md  architecture.md  implementation-plan.md  processor.md
backend/extensions/: README.md
backend/scripts/: generate_types.py  generate_types.sh
backend/tests/: __init__.py  test_api.py  test_classical_cv.py  test_device.py  test_extension_system.py  test_hatching.py  test_optimize.py  test_preprocess.py  test_vectorize.py
backend/tests/integration/: __init__.py  conftest.py  test_real_images.py
backend/tests/unit/: __init__.py  test_job_service.py
docs/: TYPE-SAFETY.md
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Controls.stories.tsx  Controls.test.tsx  Controls.tsx  ErrorBoundary.stories.tsx  ErrorBoundary.tsx  Preview.stories.tsx  Preview.test.tsx  Preview.tsx  Upload.tsx  (+4 more)
models/docs/: PLAN.md  RESEARCH.md
scripts/: auto-commit-merge.sh
test-images/: IMG_9195.HEIC
(+17 files in other folders)
