[project]
name = "photo-to-line-vectorizer"
version = "1.0.0"
description = "Convert photos to single-line SVG drawings for pen plotters"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.12.0",
]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
check_untyped_defs = false
strict_equality = true
# Allow subclassing Any (needed for third-party libs without stubs)
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "vpype.*",
    "vpype_gcode.*",
    "PIL.*",
    "pillow_heif.*",
    "torch.*",
    "torchvision.*",
    "numpy.*",
    "scipy.*",
    "skimage.*",
    "shapely.*",
    "matplotlib.*",
    "redis.*",
    "pydantic.*",
    "pydantic_settings.*",
    "fastapi.*",
    "fastapi_users.*",
    "sqlalchemy.*",
    "resend.*",
    "slowapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy-specific
    "RUF",  # ruff-specific
    "FAST", # fastapi-specific
    "ANN",  # type annotations
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "PLR2004", "S101", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.35.0",
]
